后端增加多语言支持

--- a/quantflow-admin/src/main/resources/i18n/messages_en_US.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_en_US.properties
@@ -11,6 +11,8 @@
 1010=Role has been banned, please contact administrator
 1011=Unfortunately, the access IP has been added to the system blacklist
 1012=Logout successful
+1013=Operation successful
+1014=Operation failed
 
 #Validation Messages (2000-2999)
 2001=Length must be between {min} and {max} characters
