--- a/quantflow-admin/src/main/resources/i18n/messages_ja_JP.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_ja_JP.properties
@@ -11,6 +11,8 @@
 1010=ロールが禁止されています。管理者にお問い合わせください
 1011=残念ながら、アクセスIPがシステムのブラックリストに追加されました
 1012=ログアウト成功
+1013=操作は成功しました
+1014=操作が失敗しました
 
 #検証メッセージ (2000-2999)
 2001=長さは{min}から{max}文字の間でなければなりません
