后端增加多语言支持

--- a/quantflow-admin/src/main/resources/i18n/messages_en_US.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_en_US.properties
@@ -13,6 +13,7 @@
 1012=Logout successful
 1013=Operation successful
 1014=Operation failed
+1015=Query successful
 
 #Validation Messages (2000-2999)
 2001=Length must be between {min} and {max} characters
@@ -86,3 +87,29 @@
 14002=Missing required path variable [{0}] in request path
 14003=Request parameter type mismatch, parameter [{0}] requires type: '{1}', but input value is: '{2}'
 14004=Demo mode, operation not allowed
+
+#Trading Module Messages (20000-27999)
+#Strategy Related (22000-22999)
+22004=Strategy is already running
+22005=Strategy is not running
+22006=Strategy started
+22007=Strategy stopped
+22008=Strategy execution completed
+22009=Strategy execution failed: {0}
+#Account Related (23000-23999)
+23004=Test connection successful
+23005=Test connection failed: {0}
+23006=Failed to get balance: {0}
+#Backtest Related (24000-24999)
+24004=Backtest task started
+24005=Failed to start backtest: {0}
+24006=Backtest result not found
+24007=Failed to get backtest result: {0}
+#Market Related (25000-25999)
+25001=Failed to get market data: {0}
+25002=Failed to get multiple market data: {0}
+25003=Failed to get K-line data: {0}
+#Statistics Related (26000-26999)
+26001=Failed to get trading statistics: {0}
+#Dashboard Related (27000-27999)
+27001=Failed to get dashboard data: {0}
