--- a/quantflow-admin/src/main/resources/i18n/messages_ja_JP.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_ja_JP.properties
@@ -13,6 +13,7 @@
 1012=ログアウト成功
 1013=操作は成功しました
 1014=操作が失敗しました
+1015=検索成功
 
 #検証メッセージ (2000-2999)
 2001=長さは{min}から{max}文字の間でなければなりません
@@ -86,3 +87,29 @@
 14002=リクエストパスに必要なパス変数[{0}]がありません
 14003=リクエストパラメータの型が一致しません。パラメータ[{0}]は型'{1}'が必要ですが、入力値は'{2}'です
 14004=デモモードでは操作が許可されていません
+
+#取引モジュールメッセージ (20000-27999)
+#戦略関連 (22000-22999)
+22004=戦略は既に実行中です
+22005=戦略は実行されていません
+22006=戦略が開始されました
+22007=戦略が停止されました
+22008=戦略の実行が完了しました
+22009=戦略の実行に失敗しました：{0}
+#アカウント関連 (23000-23999)
+23004=接続テスト成功
+23005=接続テスト失敗：{0}
+23006=残高の取得に失敗しました：{0}
+#バックテスト関連 (24000-24999)
+24004=バックテストタスクが開始されました
+24005=バックテストの開始に失敗しました：{0}
+24006=バックテスト結果が見つかりません
+24007=バックテスト結果の取得に失敗しました：{0}
+#マーケット関連 (25000-25999)
+25001=市場データの取得に失敗しました：{0}
+25002=複数の市場データの取得に失敗しました：{0}
+25003=K線データの取得に失敗しました：{0}
+#統計関連 (26000-26999)
+26001=取引統計の取得に失敗しました：{0}
+#ダッシュボード関連 (27000-27999)
+27001=ダッシュボードデータの取得に失敗しました：{0}
