--- a/quantflow-admin/src/main/resources/i18n/messages_zh_CN.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_zh_CN.properties
@@ -13,6 +13,7 @@
 1012=退出成功
 1013=操作成功
 1014=操作失败
+1015=查询成功
 
 #验证消息 (2000-2999)
 2001=长度必须在{min}到{max}个字符之间
@@ -86,3 +87,29 @@
 14002=请求路径中缺少必需的路径变量[{0}]
 14003=请求参数类型不匹配，参数[{0}]要求类型为：'{1}'，但输入值为：'{2}'
 14004=演示模式，不允许操作
+
+#交易模块消息 (20000-27999)
+#策略相关 (22000-22999)
+22004=策略已在运行中
+22005=策略未在运行
+22006=策略已启动
+22007=策略已停止
+22008=策略执行完成
+22009=执行策略失败：{0}
+#账户相关 (23000-23999)
+23004=测试连接成功
+23005=测试连接失败：{0}
+23006=获取余额失败：{0}
+#回测相关 (24000-24999)
+24004=回测任务已启动
+24005=启动回测失败：{0}
+24006=回测结果不存在
+24007=获取回测结果失败：{0}
+#行情相关 (25000-25999)
+25001=获取行情失败：{0}
+25002=批量获取行情失败：{0}
+25003=获取K线数据失败：{0}
+#统计相关 (26000-26999)
+26001=获取交易统计失败：{0}
+#仪表盘相关 (27000-27999)
+27001=获取仪表盘数据失败：{0}
