--- a/quantflow-admin/src/main/resources/i18n/messages_zh_TW.properties
+++ b/quantflow-admin/src/main/resources/i18n/messages_zh_TW.properties
@@ -13,6 +13,7 @@
 1012=退出成功
 1013=操作成功
 1014=操作失敗
+1015=查詢成功
 
 #驗證消息 (2000-2999)
 2001=長度必須在{min}到{max}個字符之間
@@ -86,3 +87,29 @@
 14002=請求路徑中缺少必需的路徑變量[{0}]
 14003=請求參數類型不匹配，參數[{0}]要求類型為：'{1}'，但輸入值為：'{2}'
 14004=演示模式，不允許操作
+
+#交易模組消息 (20000-27999)
+#策略相關 (22000-22999)
+22004=策略已在運行中
+22005=策略未在運行
+22006=策略已啟動
+22007=策略已停止
+22008=策略執行完成
+22009=執行策略失敗：{0}
+#賬戶相關 (23000-23999)
+23004=測試連接成功
+23005=測試連接失敗：{0}
+23006=獲取餘額失敗：{0}
+#回測相關 (24000-24999)
+24004=回測任務已啟動
+24005=啟動回測失敗：{0}
+24006=回測結果不存在
+24007=獲取回測結果失敗：{0}
+#行情相關 (25000-25999)
+25001=獲取行情失敗：{0}
+25002=批量獲取行情失敗：{0}
+25003=獲取K線數據失敗：{0}
+#統計相關 (26000-26999)
+26001=獲取交易統計失敗：{0}
+#儀表盤相關 (27000-27999)
+27001=獲取儀表盤數據失敗：{0}
